--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-to-rtf-browser",
-  "version": "1.5.1",
+  "version": "1.6.0-alfa-1",
   "author": {
     "name": "Ozires R.S.O.F",
     "email": "oziresrds@yahoo.com.br"
@@ -33,19 +33,34 @@
     "javascript"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "./dist/main.js",
+  "unpkg": "./dist/main.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "juice": "^7.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-add-filehash": "^6.10.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.5.1",
+    "babel-preset-stage-2": "^6.24.1",
     "gulp": "^4.0.2",
     "gulp-mocha": "^7.0.2",
     "mocha": "^8.2.0",
-    "should": "^13.2.3"
+    "rimraf": "^2.6.2",
+    "should": "^13.2.3",
+    "transform-runtime": "^0.0.0",
+    "webpack": "^4.44.2",
+    "webpack-bundle-size-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.1.1"
   },
   "scripts": {
-    "tests": "gulp tests"
+    "test": "gulp tests",
+    "build": "rimraf ./dist && webpack  --config ./webpack.config.js --json | webpack-bundle-size-analyzer"
   },
   "repository": {
     "type": "git",
